--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 absl-py==2.1.0
+aniso8601==9.0.1
 astunparse==1.6.3
+attrs==23.2.0
 beautifulsoup4==4.12.3
 blinker==1.8.1
 certifi==2023.7.22
@@ -20,8 +22,12 @@ grpcio==1.62.2
 gunicorn==22.0.0
 h5py==3.11.0
 idna==3.7
+importlib_resources==6.4.0
 itsdangerous==2.2.0
 Jinja2==3.1.3
+joblib==1.4.0
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
 keras==3.3.3
 libclang==18.1.1
 Markdown==3.6
@@ -37,10 +43,12 @@ opt-einsum==3.3.0
 optree==0.11.0
 packaging==24.0
 pandas==2.2.2
+patsy==0.5.6
 pillow==10.3.0
 platformdirs==3.10.0
 protobuf==4.25.3
 PyAudio==0.2.14
+pydub==0.25.1
 Pygments==2.17.2
 pypiwin32==223
 PySocks==1.7.1
@@ -48,12 +56,17 @@ python-dateutil==2.9.0.post0
 pyttsx3==2.90
 pytz==2024.1
 pywin32==306
+referencing==0.35.0
 requests==2.31.0
 retina-face==0.0.17
 rich==13.7.1
+rpds-py==0.18.0
+scikit-learn==1.2.2
+scipy==1.13.0
 six==1.16.0
 soupsieve==2.5
 SpeechRecognition==3.10.3
+statsmodels==0.14.2
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
 tensorflow==2.16.1
@@ -61,6 +74,7 @@ tensorflow-intel==2.16.1
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.4.0
 tf_keras==2.16.0
+threadpoolctl==3.5.0
 tqdm==4.66.2
 typing_extensions==4.11.0
 tzdata==2024.1
